Mobile first:begining

--- a/html/index.html
+++ b/html/index.html
@@ -38,8 +38,8 @@
       <div class=" flex  gap-l padding-y-s">
         <p><a href="CV.html"
             class=" button flex flex-justify-center flex-align-center text-bold rounded bordered bg-yellow">CV</a></p>
-        <p><a href="Projets.html"
-            class="button flex flex-justify-center flex-align-center text-bold rounded bordered bg-red">Projets</a></p>
+        <p><a href="Projects.html"
+            class="button flex flex-justify-center flex-align-center text-bold rounded bordered bg-red">Projects</a></p>
         <p><a href="Contact.html"
             class="button flex flex-justify-center flex-align-center text-bold rounded bordered bg-blue">Contact</a></p>
       </div>
