Mobile first:HomePage

--- a/html/Projects.html
+++ b/html/Projects.html
@@ -33,7 +33,7 @@
       <div>
         <h3>Google Contacts</h3>
         <div class="onlyMQ">
-          <img src="IMAGE/projet1.png" alt="photo de couverture" class="bordered-img outline-img">
+          <img src="img/projet1.png" alt="photo de couverture" class="bordered-img outline-img">
         </div>
         <p class="p">Notre projet vise à offrir une solution complète de raccourcissement de liens, enrichie par la
           génération automatique de QR codes pour chaque lien créé. Cette application permet aux utilisateurs de
@@ -41,7 +41,7 @@
           une accessibilité optimale.</p>
       </div>
       <div class="notMQ">
-        <img src="IMAGE/projet1.png" alt="photo de couverture" class="bordered-img outline-img">
+        <img src="img/projet1.png" alt="photo de couverture" class="bordered-img outline-img">
       </div>
 
     </div>
@@ -51,13 +51,13 @@
           <h3>LHPTM</h3>
           <p class="p">LHPTM est un site qui vous permettra de découvrir les langues et histoire du monde entier. </p>
         </div>
-        <img src="IMAGE/LHPTM.png" alt="photo de couverture" class="bordered-img outline-img">
+        <img src="im/LHPTM.png" alt="photo de couverture" class="bordered-img outline-img">
       </div> -->
     <div class="flex flex-justify-space-between gap-xxl padding-y-m">
       <div>
         <h3>URL's Shortener and QR Generator</h3>
         <div class="onlyMQ">
-          <img src="IMAGE/projet2.1.png" alt="photo de couverture" class="bordered-img outline-img ">
+          <img src="img/projet2.1.png" alt="photo de couverture" class="bordered-img outline-img ">
         </div>
         <p class="p">Ce projet vise à offrir une solution complète de raccourcissement de liens, enrichie par la
           génération automatique de QR codes pour chaque lien créé. Cette application permet aux utilisateurs de
@@ -66,7 +66,7 @@
       </div>
 
       <div class="notMQ">
-        <img src="IMAGE/projet2.1.png" alt="photo de couverture" class="bordered-img outline-img ">
+        <img src="img/projet2.1.png" alt="photo de couverture" class="bordered-img outline-img ">
       </div>
 
 
