--- a/html/index.html
+++ b/html/index.html
@@ -8,55 +8,55 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
+  <link rel="stylesheet" href="/style/home.css">
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
 </head>
 
 <body>
   <header>
-    <div class="flex flex-justify-space-between flex-wrap padding-y-s">
-      <h1 class="h1 text-small">
-        <a href="index.html">Keren Nzira</a>
-      </h1>
-      <ul class="list-style-none flex text-small ">
-        <li class="menu"><a href="CV.html">CV</a></li>
-        <li class="menu"><a href="Contact.html">Contact</a></li>
-        <li class="menu"><a href="Projects.html">Projects</a></li>
-      </ul>
-    </div>
-  </header>
-  <main class="mainIndex">
 
-    <div><img src="IMAGE/photo.jpg" alt="Photo de Sujoy Paul" class="width-full rounded"></div>
+    <h1 class="">
+      <a href="index.html">Keren Nzira</a>
+    </h1>
+    <nav>
+      <ul class=" ">
+        <li class="menu"><a href="/html/CV.html">CV</a></li>
+        <li class="menu"><a href="/html/Projects.html">Projects</a></li>
+        <li class="menu"><a href="/html/Contact.html">Contact</a></li>
+      </ul>
+    </nav>
+
+
+  </header>
+  <main>
+
+    <div><img src="/img/photo.jpg" alt="Photo de Sujoy Paul"></div>
     <div>
-      <h2 class="h2 padding-y-s">Hello</h2>
-      <h3 class="h3 padding-y-xs">A propos de moi</h3>
-      <p class="p padding-y-s width-p ">Je m'appelle <strong>Bimpe Muabana Nzira Keren</strong> , également connue sous
+      <h2>Hello</h2>
+      <h3>A propos de moi</h3>
+      <p class="width-p ">Je m'appelle <strong>Bimpe Muabana Nzira Keren</strong> , également connue sous
         le nom de Keren Nzira. Actuellement, je suis apprentie développeuse web et aspirante ingénieure en
         cybersécurité.</p>
-      <div class=" flex  gap-l padding-y-s">
-        <p><a href="CV.html"
-            class=" button flex flex-justify-center flex-align-center text-bold rounded bordered bg-yellow">CV</a></p>
-        <p><a href="Projects.html"
-            class="button flex flex-justify-center flex-align-center text-bold rounded bordered bg-red">Projects</a></p>
-        <p><a href="Contact.html"
-            class="button flex flex-justify-center flex-align-center text-bold rounded bordered bg-blue">Contact</a></p>
+      <div>
+        <p><a href="CV.html" class=" bg-yellow">CV</a></p>
+        <p><a href="Projects.html" class=" bg-red">Projects</a></p>
+        <p><a href="Contact.html" class=" bg-blue">Contact</a></p>
       </div>
     </div>
 
   </main>
-  <footer class="top-bordered">
+  <footer>
     <div>
-      <h3 class="h3 text-small">Télephone </h3>
-      <p class="p"><a href="tel:0818693327">0818693327</a></p>
+      <h3>Télephone </h3>
+      <p><a href="tel:0818693327">0818693327</a></p>
     </div>
     <div>
-      <h3 class="h3 text-small">E-mail</h3>
-      <p class="p"><a href="mailto:kerennzira@gmail.com">kerennzira@gmail.com</a></p>
+      <h3>E-mail</h3>
+      <p><a href="mailto:kerennzira@gmail.com">kerennzira@gmail.com</a></p>
     </div>
     <div>
-      <h3 class="h3 text-small">Suivez-moi</h3>
+      <h3>Suivez-moi</h3>
       <p class="icon">
         <a href="https://www.instagram.com/akelpha2.0/#" target="_blank" rel="noopener noreferrer"
           title="Instagram Profile"><iconify-icon icon="mdi:instagram"></iconify-icon></a>
