Mobile first:Cv page

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/style/root.css">
   <link rel="stylesheet" href="/style/home.css">
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
@@ -16,7 +17,7 @@
 <body>
   <header>
 
-    <h1 class="">
+    <h1 >
       <a href="index.html">Keren Nzira</a>
     </h1>
     <nav>
@@ -35,7 +36,7 @@
     <div>
       <h2>Hello</h2>
       <h3>A propos de moi</h3>
-      <p class="width-p ">Je m'appelle <strong>Bimpe Muabana Nzira Keren</strong> , également connue sous
+      <p class="width-p">Je m'appelle <strong>Bimpe Muabana Nzira Keren</strong> , également connue sous
         le nom de Keren Nzira. Actuellement, je suis apprentie développeuse web et aspirante ingénieure en
         cybersécurité.</p>
       <div>
