--- a/html/CV.html
+++ b/html/CV.html
@@ -8,81 +8,54 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
+  <link href="/style/root.css" rel="stylesheet">
+  <link href="/style/cv.css" rel="stylesheet">
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
 </head>
 
 <body>
   <header>
-    <div class="flex flex-justify-space-between flex-wrap padding-y-s">
-      <h1 class="h1 text-small">
-        <a href="index.html">Keren Nzira</a>
-      </h1>
-      <ul class="list-style-none flex text-small ">
-        <li class="menu"><a href="CV.html">CV</a></li>
-        <li class="menu"><a href="Contact.html">Contact</a></li>
-        <li class="menu"><a href="Projects.html">Projects</a></li>
+
+    <h1>
+      <a href="index.html">Keren Nzira</a>
+    </h1>
+    <nav>
+      <ul class=" ">
+        <li class="menu"><a href="/html/CV.html">CV</a></li>
+        <li class="menu"><a href="/html/Projects.html">Projects</a></li>
+        <li class="menu"><a href="/html/Contact.html">Contact</a></li>
       </ul>
-    </div>
+    </nav>
+
+
   </header>
-  <main class="mainCv">
+  <main>
 
     <h2>Curriculum Vitae</h2>
     <section>
-      <h2>Education</h2>
-      <article>
-        <span class="flex flex-justify-space-between">
-          <h3 class="h3">Formation en developpement web et mobile - CERTIFICATION SIMPLON (BAC+2)</h3>
-          <p class="p">Depuis 2024</p>
-        </span>
-
-        <h4>Kadea Academy Kinshasa, KN, Democratic Republic of the Congo</h4>
-
-      </article>
-      <article>
-        <span class="flex flex-justify-space-between">
-          <h3 class="h3">Formation d'Anglais</h3>
-          <p class="p">Depuis 2023</p>
-        </span>
-
-        <h4>CALI,Kinshasa, KN, Democratic Republic of the Congo</h4>
-
-      </article>
-      <article>
-        <span class="flex flex-justify-space-between">
-          <h3 class="h3">Diplôme d'état en Sciences</h3>
-          <p class="p">De septembre 2022 à juin 2023</p>
-        </span>
-
-        <h4>Lycée LIZIBA Kinshasa, KN, Democratic Republic of the Congo</h4>
-        <p class="p">Avec Satisfaction</p>
-      </article>
-    </section>
-    <section class="top-bordered">
       <h2>Réalisations</h2>
       <h3>Google Contacts Clone</h3>
-      <ul class="padding-left-m">
+      <ul>
         <li>Utilisation des doms avec JavaScript</li>
         <li>Mise en forme du site avec HTML & CSS</li>
         <li>le lien GitHub:
-          <a href="https://github.com/kadea-academy-learners/google-contacts-clone-Akelpha" class="aForm">GitHub</a>
+          <a href="https://github.com/kadea-academy-learners/google-contacts-clone-Akelpha">GitHub</a>
         </li>
       </ul>
       <h3>Maquette Sunnyide</h3>
-      <ul class="padding-left-m">
+      <ul>
         <li>Utilisation de Figma avec le UI design</li>
         <li>le lien Figma :<a
-            href="https://www.figma.com/design/nVhvbF05DUX76MLzj8ruuG/Sunnyside?node-id=0-1&t=InhI6ZsXMXGSEtv8-1"
-            class="aForm">
+            href="https://www.figma.com/design/nVhvbF05DUX76MLzj8ruuG/Sunnyside?node-id=0-1&t=InhI6ZsXMXGSEtv8-1">
             Figma</a>
         </li>
       </ul>
       <h3>Url Shortener</h3>
-      <ul class="padding-left-m">
+      <ul>
         <li>Utilisation d'Express,Ejs et NodeJs</li>
-        <li>Mise en forme avec HTML ET CSS</li>
-        <li>le lien GitHub :<a href="https://github.com/kadea-academy-learners/url-shortener-Akelpha" class="aForm">
+        <li>Mise en forme avec HTML et CSS</li>
+        <li>le lien GitHub :<a href="https://github.com/kadea-academy-learners/url-shortener-Akelpha">
             GitHub</a>
         </li>
 
@@ -90,13 +63,13 @@
     </section>
     <section class="top-bordered">
       <h2>Compétences et Expertise</h2>
-      <ul class="padding-left-m">
+      <ul>
+        <li>HTML, CSS et JavaScript</li>
         <li>UI/UX Design</li>
-        <li>HTML et CSS</li>
-        <li>JavaScript</li>
+        <li>AdonisJs</li>
       </ul>
       <h3>Soft Skills</h3>
-      <ul class="padding-left-m">
+      <ul>
         <li>Résolution des problèmes</li>
         <li>Travail d'équipe</li>
         <li>Esprit Critique</li>
@@ -106,25 +79,53 @@
 
     </section>
     <section class="top-bordered">
+      <h2>Education</h2>
+      <article>
+        <span>
+          <h3>Formation en developpement web et mobile - CERTIFICATION SIMPLON (BAC+2)</h3>
+          <p>Depuis 2024</p>
+        </span>
+        <h4>Kadea Academy Kinshasa, KN, République Démocratique du Congo</h4>
+
+      </article>
+      <article>
+        <span>
+          <h3>Formation en Anglais</h3>
+          <p>Depuis 2023</p>
+        </span>
+        <h4>CALI,Kinshasa, KN, République Démocratique du Congo</h4>
+      </article>
+      <article>
+        <span>
+          <h3>Diplôme d'état en Sciences</h3>
+          <p>De septembre 2022 à juin 2023</p>
+        </span>
+        <h4>Lycée LIZIBA Kinshasa, KN, République Démocratique du Congo</h4>
+        <p>Avec Satisfaction</p>
+
+      </article>
+    </section>
+
+    <section class="top-bordered">
       <h2>Langues</h2>
-      <ul class="padding-left-m">
+      <ul>
         <li><strong>Lingala</strong> :Langue Maternelle</li>
         <li><strong>Français</strong> : Langue Maternelle</li>
         <li><strong>Anglais</strong> : Compétence professionnelle générale </li>
       </ul>
     </section>
   </main>
-  <footer class="top-bordered">
+  <footer>
     <div>
-      <h3 class="h3 text-small">Télephone </h3>
-      <p class="p"><a href="tel:0818693327">0818693327</a></p>
+      <h3>Télephone </h3>
+      <p><a href="tel:0818693327">0818693327</a></p>
     </div>
     <div>
-      <h3 class="h3 text-small">E-mail</h3>
-      <p class="p"><a href="mailto:kerennzira@gmail.com">kerennzira@gmail.com</a></p>
+      <h3>E-mail</h3>
+      <p><a href="mailto:kerennzira@gmail.com">kerennzira@gmail.com</a></p>
     </div>
     <div>
-      <h3 class="h3 text-small">Suivez-moi</h3>
+      <h3>Suivez-moi</h3>
       <p class="icon">
         <a href="https://www.instagram.com/akelpha2.0/#" target="_blank" rel="noopener noreferrer"
           title="Instagram Profile"><iconify-icon icon="mdi:instagram"></iconify-icon></a>
@@ -136,7 +137,7 @@
     </div>
     <div class="text-small">&copy; 2024 By Keren Nzira</div>
   </footer>
-  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+
   </main>
 </body>
 
