--- a/html/Contact.html
+++ b/html/Contact.html
@@ -8,23 +8,27 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-  <link href="" rel="stylesheet">
+  <link href="/style/root.css" rel="stylesheet">
+  <link rel="stylesheet" href="/style/">
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
 </head>
 
 <body>
   <header>
-    <div class="flex flex-justify-space-between flex-wrap padding-y-s">
-      <h1 class="h1 text-small">
-        <a href="index.html">Keren Nzira</a>
-      </h1>
-      <ul class="list-style-none flex text-small ">
-        <li class="menu"><a href="CV.html">CV</a></li>
-        <li class="menu"><a href="Contact.html">Contact</a></li>
-        <li class="menu"><a href="Projects.html">Projects</a></li>
+
+    <h1 >
+      <a href="index.html">Keren Nzira</a>
+    </h1>
+    <nav>
+      <ul class=" ">
+        <li class="menu"><a href="/html/CV.html">CV</a></li>
+        <li class="menu"><a href="/html/Projects.html">Projects</a></li>
+        <li class="menu"><a href="/html/Contact.html">Contact</a></li>
       </ul>
-    </div>
+    </nav>
+
+
   </header>
 
   <main class="flex margin-auto max-width-1100 mainContact">
