--- a/html/Projects.html
+++ b/html/Projects.html
@@ -8,23 +8,27 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
+  <link href="/style/root.css" rel="stylesheet">
+  <link rel="stylesheet" href="/style/">
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
 </head>
 
 <body>
   <header>
-    <div class="flex flex-justify-space-between flex-wrap padding-y-s">
-      <h1 class="h1 text-small">
-        <a href="index.html">Keren Nzira</a>
-      </h1>
-      <ul class="list-style-none flex text-small ">
-        <li class="menu"><a href="CV.html">CV</a></li>
-        <li class="menu"><a href="Contact.html">Contact</a></li>
-        <li class="menu"><a href="Projects.html">Projects</a></li>
+
+    <h1 >
+      <a href="index.html">Keren Nzira</a>
+    </h1>
+    <nav>
+      <ul class=" ">
+        <li class="menu"><a href="/html/CV.html">CV</a></li>
+        <li class="menu"><a href="/html/Projects.html">Projects</a></li>
+        <li class="menu"><a href="/html/Contact.html">Contact</a></li>
       </ul>
-    </div>
+    </nav>
+
+
   </header>
   <main class="mainProject">
 
@@ -41,7 +45,7 @@
           une accessibilité optimale.</p>
       </div>
       <div class="notMQ">
-        <img src="img/projet1.png" alt="photo de couverture" class="bordered-img outline-img">
+        <img src="/img/projet1.png" alt="photo de couverture" class="bordered-img outline-img">
       </div>
 
     </div>
@@ -51,13 +55,13 @@
           <h3>LHPTM</h3>
           <p class="p">LHPTM est un site qui vous permettra de découvrir les langues et histoire du monde entier. </p>
         </div>
-        <img src="im/LHPTM.png" alt="photo de couverture" class="bordered-img outline-img">
+        <img src="/img/LHPTM.png" alt="photo de couverture" class="bordered-img outline-img">
       </div> -->
     <div class="flex flex-justify-space-between gap-xxl padding-y-m">
       <div>
         <h3>URL's Shortener and QR Generator</h3>
         <div class="onlyMQ">
-          <img src="img/projet2.1.png" alt="photo de couverture" class="bordered-img outline-img ">
+          <img src="/img/projet2.1.png" alt="photo de couverture" class="bordered-img outline-img ">
         </div>
         <p class="p">Ce projet vise à offrir une solution complète de raccourcissement de liens, enrichie par la
           génération automatique de QR codes pour chaque lien créé. Cette application permet aux utilisateurs de
@@ -66,7 +70,7 @@
       </div>
 
       <div class="notMQ">
-        <img src="img/projet2.1.png" alt="photo de couverture" class="bordered-img outline-img ">
+        <img src="/img/projet2.1.png" alt="photo de couverture" class="bordered-img outline-img ">
       </div>
 
 
