Mobile first:Projets  page

--- a/html/Projects.html
+++ b/html/Projects.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <link href="/style/root.css" rel="stylesheet">
-  <link rel="stylesheet" href="/style/">
+  <link rel="stylesheet" href="/style/project.css">
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
 </head>
@@ -17,7 +17,7 @@
 <body>
   <header>
 
-    <h1 >
+    <h1>
       <a href="index.html">Keren Nzira</a>
     </h1>
     <nav>
@@ -30,64 +30,56 @@
 
 
   </header>
-  <main class="mainProject">
-
-    <h2 class="padding-y-l">Projects</h2>
-    <div class="flex flex-justify-space-between gap-xxl padding-y-m">
+  <main>
+    <h2>Projects</h2>
+    <div >
+      
       <div>
         <h3>Google Contacts</h3>
-        <div class="onlyMQ">
-          <img src="img/projet1.png" alt="photo de couverture" class="bordered-img outline-img">
+        <div class="onlyMF">
+          <img src="/img/projet1.png" alt="photo de couverture" >
         </div>
-        <p class="p">Notre projet vise à offrir une solution complète de raccourcissement de liens, enrichie par la
-          génération automatique de QR codes pour chaque lien créé. Cette application permet aux utilisateurs de
-          transformer des URL longues en liens courts, faciles à partager, tout en générant un QR code associé pour
-          une accessibilité optimale.</p>
+        <p>
+          Ce projet consiste à créer un clone de Google Contacts avec des fonctionnalités de base pour gérer efficacement une liste de contacts. Les utilisateurs pourront ajouter de nouveaux contacts en renseignant des informations telles que le nom, le numéro de téléphone, et l'adresse e-mail. 
+          L'application permettra également de modifier les informations des contacts existants, de supprimer des contacts inutiles, et de les afficher sous différents libellés pour une meilleure organisation.
+           Une interface conviviale et intuitive sera mise en place pour garantir une navigation fluide.
+           Ce projet vise à offrir une gestion simple mais efficace des contacts, adaptée aux besoins de tous les utilisateurs.
+        </p>
       </div>
-      <div class="notMQ">
-        <img src="/img/projet1.png" alt="photo de couverture" class="bordered-img outline-img">
+      <div class="notMF">
+        <img src="/img/projet1.png" alt="photo de couverture">
       </div>
 
     </div>
-
-    <!-- <div class="flex flex-justify-space-between gap-xxl padding-y-m">
-        <div>
-          <h3>LHPTM</h3>
-          <p class="p">LHPTM est un site qui vous permettra de découvrir les langues et histoire du monde entier. </p>
-        </div>
-        <img src="/img/LHPTM.png" alt="photo de couverture" class="bordered-img outline-img">
-      </div> -->
-    <div class="flex flex-justify-space-between gap-xxl padding-y-m">
+    <div >
       <div>
         <h3>URL's Shortener and QR Generator</h3>
-        <div class="onlyMQ">
-          <img src="/img/projet2.1.png" alt="photo de couverture" class="bordered-img outline-img ">
+        <div class="onlyMF">
+          <img src="/img/projet2.1.png" alt="photo de couverture" >
         </div>
-        <p class="p">Ce projet vise à offrir une solution complète de raccourcissement de liens, enrichie par la
-          génération automatique de QR codes pour chaque lien créé. Cette application permet aux utilisateurs de
-          transformer des URL longues en liens courts, faciles à partager, tout en générant un QR code associé pour
-          une accessibilité optimale.</p>
+        <p>
+          Ce projet vise à développer une solution complète de raccourcissement de liens, enrichie par la génération automatique de QR codes pour chaque lien créé. 
+          L'application permettra aux utilisateurs de transformer des URL longues et complexes en liens courts et simples à partager, tout en leur offrant une option moderne et pratique pour accéder rapidement à ces liens via des QR codes. 
+          Ces QR codes pourront être scannés à l'aide de tout appareil compatible, garantissant une accessibilité optimale dans diverses situations, comme les présentations, les campagnes publicitaires ou les partages personnels.</p>
       </div>
 
-      <div class="notMQ">
-        <img src="/img/projet2.1.png" alt="photo de couverture" class="bordered-img outline-img ">
+      <div class="notMF">
+        <img src="/img/projet2.1.png" alt="photo de couverture" >
       </div>
-
-
     </div>
 
   </main>
-  <footer class="top-bordered">
+  <footer>
     <div>
-      <h3 class="h3 text-small">Télephone </h3>
-      <p class="p"><a href="tel:0818693327">0818693327</a></p>
+      <h3>Télephone </h3>
+      <p><a href="tel:0818693327">0818693327</a></p>
     </div>
     <div>
-      <h3 class="h3 text-small">E-mail</h3>
-      <p class="p"><a href="mailto:kerennzira@gmail.com">kerennzira@gmail.com</a></p>
+      <h3>E-mail</h3>
+      <p><a href="mailto:kerennzira@gmail.com">kerennzira@gmail.com</a></p>
     </div>
     <div>
-      <h3 class="h3 text-small">Suivez-moi</h3>
+      <h3>Suivez-moi</h3>
       <p class="icon">
         <a href="https://www.instagram.com/akelpha2.0/#" target="_blank" rel="noopener noreferrer"
           title="Instagram Profile"><iconify-icon icon="mdi:instagram"></iconify-icon></a>
@@ -99,7 +91,6 @@
     </div>
     <div class="text-small">&copy; 2024 By Keren Nzira</div>
   </footer>
-  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   </main>
 </body>
 
