--- a/html/Contact.html
+++ b/html/Contact.html
@@ -9,15 +9,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <link href="/style/root.css" rel="stylesheet">
-  <link rel="stylesheet" href="/style/">
+  <link href="/style/contact.css" rel="stylesheet">
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
 </head>
 
 <body>
+
   <header>
 
-    <h1 >
+    <h1>
       <a href="index.html">Keren Nzira</a>
     </h1>
     <nav>
@@ -31,8 +32,8 @@
 
   </header>
 
-  <main class="flex margin-auto max-width-1100 mainContact">
-    <div class=" flex-column flex-1 gap-l mainContactdiv">
+  <main>
+    <div class="left-side">
       <h2>Contact</h2>
       <section>
         <h3>Phone</h3>
@@ -40,78 +41,81 @@
       </section>
       <section>
         <h3>Email</h3>
-        <p class="p"><a href="mailto:kerennzira@gmail.com">kerennzira@gmail.com</a></p>
+        <p class="p"><a href="mailto:kerennzira@icloud.com">kerennzira@icloud.com</a></p>
       </section>
     </div>
-    <div class="flex-1 gap-l mainContactdiv">
-      <form>
-        <div class="flex gap-l padding-y-s">
+    <form class="rigth-side">
+      <div class="inputPart">
+        <div>
           <div>
-            <div>
-              <label for="nom"> Votre Nom</label>
-            </div>
-            <div>
-              <input type="text" name="nom" id="nom" class="padding-y-s ">
-            </div>
-
+            <label for="nom"> First Name</label>
           </div>
           <div>
-            <div>
-              <label for="prénom">Votre Prénom</label>
-            </div>
-            <div>
-              <input type="text" name="prénom" id="prénom" class="padding-y-s ">
-            </div>
-          </div>
-        </div>
-        <div class="flex gap-l padding-y-s">
-          <div>
-            <div>
-              <label for="email">Votre Email</label>
-            </div>
-            <div>
-              <input type="text" name="email" id="email" class="padding-y-s ">
-            </div>
-          </div>
-          <div>
-            <div>
-              <label for="objet">L'objet de votre message</label>
-            </div>
-            <div>
-              <input type="text" name="objet" id="objet" class="padding-y-s ">
-            </div>
+            <input type="text" name="nom" id="nom" class="padding-y-s ">
           </div>
         </div>
         <div>
-          <div class="flex gap-l padding-y-s">
-            <div>
-              <div>
-                <label for="message">Votre message</label>
-              </div>
-              <div>
-                <textarea name="message" id="message" class="resize-none padding-y-m"></textarea>
-              </div>
-            </div>
-            <div class="padding-y-m">
-              <button type="submit" class=" height-100 width-100 rounded bordered text-bold  bg-yellow">Envoyer</button>
-            </div>
-
+          <div>
+            <label for="prénom">Last Name</label>
+          </div>
+          <div>
+            <input type="text" name="prénom" id="prénom" class="padding-y-s ">
           </div>
         </div>
-      </form>
-    </div>
+      </div>
+      <div class="inputPart">
+        <div>
+          <div>
+            <label for="email">Email</label>
+          </div>
+          <div>
+            <input type="text" name="email" id="email" class="padding-y-s ">
+          </div>
+        </div>
+        <div>
+          <div>
+            <label for="objet">Subject</label>
+          </div>
+          <div>
+            <input type="text" name="objet" id="objet" class="padding-y-s ">
+          </div>
+        </div>
+      </div>
+
+      <div class="inputPart">
+        <div>
+          <div>
+            <label for="message">Message</label>
+          </div>
+          <div>
+            <textarea name="message" id="message"></textarea>
+          </div>
+        </div>
+        <div>
+          <button type="submit">Envoyer</button>
+        </div>
+
+      </div>
+
+    </form>
+
+
+
+
   </main>
-  <footer class="top-bordered">
+
+
+  <footer>
     <div>
-      <h3 class="h3 text-small">Télephone </h3>
-      <p class="p"><a href="tel:0818693327">0818693327</a></p>
+      <h3>Télephone </h3>
+      <p><a href="tel:0818693327">0818693327</a></p>
     </div>
     <div>
-      <h3 class="h3 text-small">E-mail</h3>
-      <p class="p"><a href="mailto:kerennzira@gmail.com">kerennzira@gmail.com</a></p>
+      <h3>E-mail</h3>
+      <p><a href="mailto:kerennzira@gmail.com">kerennzira@gmail.com</a></p>
     </div>
     <div>
-      <h3 class="h3 text-small">Suivez-moi</h3>
+      <h3>Suivez-moi</h3>
       <p class="icon">
         <a href="https://www.instagram.com/akelpha2.0/#" target="_blank" rel="noopener noreferrer"
           title="Instagram Profile"><iconify-icon icon="mdi:instagram"></iconify-icon></a>
@@ -123,7 +127,7 @@
     </div>
     <div class="text-small">&copy; 2024 By Keren Nzira</div>
   </footer>
-  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+
 
 </body>
 
