--- a/html/Contact.html
+++ b/html/Contact.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-
   <header>
 
     <h1>
@@ -31,7 +30,6 @@
 
 
   </header>
-
   <main>
     <div class="left-side">
       <h2>Contact</h2>
@@ -51,7 +49,7 @@
             <label for="nom"> First Name</label>
           </div>
           <div>
-            <input type="text" name="nom" id="nom" class="padding-y-s ">
+            <input type="text" name="nom" id="nom">
           </div>
         </div>
         <div>
@@ -59,7 +57,7 @@
             <label for="prénom">Last Name</label>
           </div>
           <div>
-            <input type="text" name="prénom" id="prénom" class="padding-y-s ">
+            <input type="text" name="prénom" id="prénom">
           </div>
         </div>
       </div>
@@ -69,7 +67,7 @@
             <label for="email">Email</label>
           </div>
           <div>
-            <input type="text" name="email" id="email" class="padding-y-s ">
+            <input type="text" name="email" id="email">
           </div>
         </div>
         <div>
@@ -77,7 +75,7 @@
             <label for="objet">Subject</label>
           </div>
           <div>
-            <input type="text" name="objet" id="objet" class="padding-y-s ">
+            <input type="text" name="objet" id="objet">
           </div>
         </div>
       </div>
@@ -103,8 +101,6 @@
 
 
   </main>
-
-
   <footer>
     <div>
       <h3>Télephone </h3>
@@ -127,8 +123,6 @@
     </div>
     <div class="text-small">&copy; 2024 By Keren Nzira</div>
   </footer>
-
-
 </body>
 
 </html>
