--- a/html/Projects.html
+++ b/html/Projects.html
@@ -32,18 +32,22 @@
   </header>
   <main>
     <h2>Projects</h2>
-    <div >
-      
+    <div>
+
       <div>
         <h3>Google Contacts</h3>
         <div class="onlyMF">
-          <img src="/img/projet1.png" alt="photo de couverture" >
+          <img src="/img/projet1.png" alt="photo de couverture">
         </div>
         <p>
-          Ce projet consiste à créer un clone de Google Contacts avec des fonctionnalités de base pour gérer efficacement une liste de contacts. Les utilisateurs pourront ajouter de nouveaux contacts en renseignant des informations telles que le nom, le numéro de téléphone, et l'adresse e-mail. 
-          L'application permettra également de modifier les informations des contacts existants, de supprimer des contacts inutiles, et de les afficher sous différents libellés pour une meilleure organisation.
-           Une interface conviviale et intuitive sera mise en place pour garantir une navigation fluide.
-           Ce projet vise à offrir une gestion simple mais efficace des contacts, adaptée aux besoins de tous les utilisateurs.
+          Ce projet consiste à créer un clone de Google Contacts avec des fonctionnalités de base pour gérer
+          efficacement une liste de contacts. Les utilisateurs pourront ajouter de nouveaux contacts en renseignant des
+          informations telles que le nom, le numéro de téléphone, et l'adresse e-mail.
+          L'application permettra également de modifier les informations des contacts existants, de supprimer des
+          contacts inutiles, et de les afficher sous différents libellés pour une meilleure organisation.
+          Une interface conviviale et intuitive sera mise en place pour garantir une navigation fluide.
+          Ce projet vise à offrir une gestion simple mais efficace des contacts, adaptée aux besoins de tous les
+          utilisateurs.
         </p>
       </div>
       <div class="notMF">
@@ -51,20 +55,25 @@
       </div>
 
     </div>
-    <div >
+    <div>
       <div>
         <h3>URL's Shortener and QR Generator</h3>
         <div class="onlyMF">
-          <img src="/img/projet2.1.png" alt="photo de couverture" >
+          <img src="/img/projet2.1.png" alt="photo de couverture">
         </div>
         <p>
-          Ce projet vise à développer une solution complète de raccourcissement de liens, enrichie par la génération automatique de QR codes pour chaque lien créé. 
-          L'application permettra aux utilisateurs de transformer des URL longues et complexes en liens courts et simples à partager, tout en leur offrant une option moderne et pratique pour accéder rapidement à ces liens via des QR codes. 
-          Ces QR codes pourront être scannés à l'aide de tout appareil compatible, garantissant une accessibilité optimale dans diverses situations, comme les présentations, les campagnes publicitaires ou les partages personnels.</p>
+          Ce projet vise à développer une solution complète de raccourcissement de liens, enrichie par la génération
+          automatique de QR codes pour chaque lien créé.
+          L'application permettra aux utilisateurs de transformer des URL longues et complexes en liens courts et
+          simples à partager, tout en leur offrant une option moderne et pratique pour accéder rapidement à ces liens
+          via des QR codes.
+          Ces QR codes pourront être scannés à l'aide de tout appareil compatible, garantissant une accessibilité
+          optimale dans diverses situations, comme les présentations, les campagnes publicitaires ou les partages
+          personnels.</p>
       </div>
 
       <div class="notMF">
-        <img src="/img/projet2.1.png" alt="photo de couverture" >
+        <img src="/img/projet2.1.png" alt="photo de couverture">
       </div>
     </div>
 
@@ -81,12 +90,12 @@
     <div>
       <h3>Suivez-moi</h3>
       <p class="icon">
-        <a href="https://www.instagram.com/akelpha2.0/#" target="_blank" rel="noopener noreferrer"
-          title="Instagram Profile"><iconify-icon icon="mdi:instagram"></iconify-icon></a>
+        <a href="https://www.linkedin.com/in/keren-nzira/" target="_blank" rel="noopener noreferrer"
+          title="Instagram Profile"><iconify-icon icon="ri:linkedin-fill"></iconify-icon></a>
         <a href="https://twitter.com/akelpha2" target="_blank" rel="noopener noreferrer"
-          title="Twitter Profile"><iconify-icon icon="simple-icons:x"></iconify-icon></a>
-        <a href="https://github.com/Akelpha" target="_blank" rel="noopener noreferrer"
-          title="GitHub profile"><iconify-icon icon="codicon:github"></iconify-icon></a>
+          title="Twitter Profile"><iconify-icon icon="ri:twitter-x-line""></iconify-icon></a>
+        <a href=" https://github.com/Akelpha" target="_blank" rel="noopener noreferrer"
+            title="GitHub profile"><iconify-icon icon="codicon:github"></iconify-icon></a>
       </p>
     </div>
     <div class="text-small">&copy; 2024 By Keren Nzira</div>
