--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
 <body>
   <header>
 
-    <h1 >
+    <h1>
       <a href="index.html">Keren Nzira</a>
     </h1>
     <nav>
@@ -59,12 +59,12 @@
     <div>
       <h3>Suivez-moi</h3>
       <p class="icon">
-        <a href="https://www.instagram.com/akelpha2.0/#" target="_blank" rel="noopener noreferrer"
-          title="Instagram Profile"><iconify-icon icon="mdi:instagram"></iconify-icon></a>
+        <a href="https://www.linkedin.com/in/keren-nzira/" target="_blank" rel="noopener noreferrer"
+          title="Instagram Profile"><iconify-icon icon="ri:linkedin-fill"></iconify-icon></a>
         <a href="https://twitter.com/akelpha2" target="_blank" rel="noopener noreferrer"
-          title="Twitter Profile"><iconify-icon icon="simple-icons:x"></iconify-icon></a>
-        <a href="https://github.com/Akelpha" target="_blank" rel="noopener noreferrer"
-          title="GitHub profile"><iconify-icon icon="codicon:github"></iconify-icon></a>
+          title="Twitter Profile"><iconify-icon icon="ri:twitter-x-line""></iconify-icon></a>
+        <a href=" https://github.com/Akelpha" target="_blank" rel="noopener noreferrer"
+            title="GitHub profile"><iconify-icon icon="codicon:github"></iconify-icon></a>
       </p>
     </div>
     <div class="text-small">&copy; 2024 By Keren Nzira</div>
