--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
 
     <h1>
-      <a href="index.html">Keren Nzira</a>
+      <a href="/index.html">Keren Nzira</a>
     </h1>
     <nav>
       <ul class=" ">
