--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     <div>
       <h2>Hello</h2>
       <h3>A propos de moi</h3>
-      <p class="width-p">Je m'appelle <strong>Bimpe Muabana Nzira Keren</strong> , également connue sous
+      <p>Je m'appelle <strong>Bimpe Muabana Nzira Keren</strong> , également connue sous
         le nom de Keren Nzira. Actuellement, je suis apprentie développeuse web et aspirante ingénieure en
         cybersécurité.</p>
       <div>
-        <p><a href="CV.html" class=" bg-yellow">CV</a></p>
-        <p><a href="Projects.html" class=" bg-red">Projects</a></p>
-        <p><a href="Contact.html" class=" bg-blue">Contact</a></p>
+        <p><a href="/html/CV.html " class=" bg-yellow">CV</a></p>
+        <p><a href="/html/Projects.html" class=" bg-red">Projects</a></p>
+        <p><a href="/html/Contact.html" class=" bg-blue">Contact</a></p>
       </div>
     </div>
 
