resolution of issues

--- a/html/CV.html
+++ b/html/CV.html
@@ -18,7 +18,7 @@
   <header>
 
     <h1>
-      <a href="/index.html">Keren Nzira</a>
+      <a href="/">Keren Nzira</a>
     </h1>
     <nav>
       <ul class=" ">
