isssues' resolution and projet's finalisation

--- a/html/Projects.html
+++ b/html/Projects.html
@@ -16,19 +16,16 @@
 
 <body>
   <header>
-
     <h1>
       <a href="/">Keren Nzira</a>
     </h1>
     <nav>
-      <ul class=" ">
+      <ul>
         <li class="menu"><a href="/html/CV.html">CV</a></li>
         <li class="menu"><a href="/html/Projects.html">Projects</a></li>
         <li class="menu"><a href="/html/Contact.html">Contact</a></li>
       </ul>
     </nav>
-
-
   </header>
   <main>
     <h2>Projects</h2>
@@ -76,7 +73,26 @@
         <img src="/img/projet2.1.png" alt="photo de couverture">
       </div>
     </div>
+    <div>
 
+      <div>
+        <h3>The PostSociety</h3>
+        <div class="onlyMF">
+          <img src="/img/projet3.jpg" alt="photo de couverture">
+        </div>
+        <p>
+          Ce projet est une application de blog développée avec AdonisJS, permettant de créer, publier, modifier et
+          supprimer des articles. Les utilisateurs peuvent gérer leurs posts via une interface simple et fonctionnelle.
+          L'application repose sur une base de données relationnelle avec des migrations pour une gestion efficace et
+          structurée des données. AdonisJS garantit une exécution rapide et sécurisée grâce à des validations robustes.
+          Ce projet offre une solution accessible et performante pour publier et administrer du contenu en ligne.
+        </p>
+      </div>
+      <div class="notMF">
+        <img src="/img/projet3.jpg" alt="photo de couverture">
+      </div>
+
+    </div>
   </main>
   <footer>
     <div>
