--- a/html/CV.html
+++ b/html/CV.html
@@ -16,19 +16,16 @@
 
 <body>
   <header>
-
     <h1>
       <a href="/">Keren Nzira</a>
     </h1>
     <nav>
-      <ul class=" ">
+      <ul>
         <li class="menu"><a href="/html/CV.html">CV</a></li>
         <li class="menu"><a href="/html/Projects.html">Projects</a></li>
         <li class="menu"><a href="/html/Contact.html">Contact</a></li>
       </ul>
     </nav>
-
-
   </header>
   <main>
 
@@ -60,9 +57,18 @@
         </li>
 
       </ul>
+      <h3>The PostSociety</h3>
+      <ul>
+        <li>Utilisation d'AdonisJS</li>
+        <li>Mise en forme avec Edge et CSS</li>
+        <li>le lien GitHub :<a href="https://github.com/kadea-academy-learners/adonis-blog-da-Akelpha">
+            GitHub</a>
+        </li>
+
+      </ul>
     </section>
     <section class="top-bordered">
-      <h2>Compétences et Expertise</h2>
+      <h2>Compétences et expertise</h2>
       <ul>
         <li>HTML, CSS et JavaScript</li>
         <li>UI/UX Design</li>
@@ -75,6 +81,7 @@
         <li>Esprit Critique</li>
         <li>Goût du challenge</li>
         <li>Perspicacité</li>
+        <li>Curiosité</li>
       </ul>
 
     </section>
@@ -85,7 +92,7 @@
           <h3>Formation en developpement web et mobile - CERTIFICATION SIMPLON (BAC+2)</h3>
           <p>Depuis 2024</p>
         </span>
-        <h4>Kadea Academy Kinshasa, KN, République Démocratique du Congo</h4>
+        <p>Kadea Academy Kinshasa, KN, République Démocratique du Congo</p>
 
       </article>
       <article>
@@ -93,15 +100,14 @@
           <h3>Formation en Anglais</h3>
           <p>Depuis 2023</p>
         </span>
-        <h4>CALI,Kinshasa, KN, République Démocratique du Congo</h4>
+        <p>CALI,Kinshasa, KN, République Démocratique du Congo</p>
       </article>
       <article>
         <span>
           <h3>Diplôme d'état en Sciences</h3>
-          <p>De septembre 2022 à juin 2023</p>
+          <p>2022 - 2023</p>
         </span>
-        <h4>Lycée LIZIBA Kinshasa, KN, République Démocratique du Congo</h4>
-        <p>Avec Satisfaction</p>
+        <p>Lycée LIZIBA Kinshasa, KN, République Démocratique du Congo</p>
 
       </article>
     </section>
@@ -109,9 +115,9 @@
     <section class="top-bordered">
       <h2>Langues</h2>
       <ul>
-        <li><strong>Lingala</strong> :Langue Maternelle</li>
-        <li><strong>Français</strong> : Langue Maternelle</li>
-        <li><strong>Anglais</strong> : Compétence professionnelle générale </li>
+        <li>Lingala : Langue Maternelle</li>
+        <li>Français : Langue Maternelle</li>
+        <li>Anglais : Compétence professionnelle générale </li>
       </ul>
     </section>
   </main>
