fixing validator issues

--- a/html/Projects.html
+++ b/html/Projects.html
@@ -109,9 +109,9 @@
         <a href="https://www.linkedin.com/in/keren-nzira/" target="_blank" rel="noopener noreferrer"
           title="Instagram Profile"><iconify-icon icon="ri:linkedin-fill"></iconify-icon></a>
         <a href="https://twitter.com/akelpha2" target="_blank" rel="noopener noreferrer"
-          title="Twitter Profile"><iconify-icon icon="ri:twitter-x-line""></iconify-icon></a>
+          title="Twitter Profile"><iconify-icon icon="ri:twitter-x-line"></iconify-icon></a>
         <a href=" https://github.com/Akelpha" target="_blank" rel="noopener noreferrer"
-            title="GitHub profile"><iconify-icon icon="codicon:github"></iconify-icon></a>
+          title="GitHub profile"><iconify-icon icon="codicon:github"></iconify-icon></a>
       </p>
     </div>
     <div class="text-small">&copy; 2024 By Keren Nzira</div>
