fixing validator issues

--- a/html/CV.html
+++ b/html/CV.html
@@ -88,25 +88,25 @@
     <section class="top-bordered">
       <h2>Education</h2>
       <article>
-        <span>
+        <div>
           <h3>Formation en developpement web et mobile - CERTIFICATION SIMPLON (BAC+2)</h3>
           <p>Depuis 2024</p>
-        </span>
+        </div>
         <p>Kadea Academy Kinshasa, KN, République Démocratique du Congo</p>
 
       </article>
       <article>
-        <span>
+        <div>
           <h3>Formation en Anglais</h3>
           <p>Depuis 2023</p>
-        </span>
+        </div>
         <p>CALI,Kinshasa, KN, République Démocratique du Congo</p>
       </article>
       <article>
-        <span>
+        <div>
           <h3>Diplôme d'état en Sciences</h3>
           <p>2022 - 2023</p>
-        </span>
+        </div>
         <p>Lycée LIZIBA Kinshasa, KN, République Démocratique du Congo</p>
 
       </article>
@@ -143,8 +143,6 @@
     </div>
     <div class="text-small">&copy; 2024 By Keren Nzira</div>
   </footer>
-
-  </main>
 </body>
 
 </html>
