--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
     </div>
     <div>
       <h3>Suivez-moi</h3>
-      <p class="icon">
+      <div class="icon">
         <a href="https://www.linkedin.com/in/keren-nzira/" target="_blank" rel="noopener noreferrer"
           title="Instagram Profile"><iconify-icon icon="ri:linkedin-fill"></iconify-icon></a>
         <a href="https://twitter.com/akelpha2" target="_blank" rel="noopener noreferrer"
           title="Twitter Profile"><iconify-icon icon="ri:twitter-x-line"></iconify-icon></a>
         <a href=" https://github.com/Akelpha" target="_blank" rel="noopener noreferrer"
           title="GitHub profile"><iconify-icon icon="codicon:github"></iconify-icon></a>
-      </p>
+      </div>
     </div>
     <div class="text-small">&copy; 2024 By Keren Nzira</div>
   </footer>
