fix: given issues

--- a/index.html
+++ b/index.html
@@ -4,21 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Keren Nzira</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  <title> PortFolio De Keren Nzira</title>
   <link rel="stylesheet" href="/style/root.css">
   <link rel="stylesheet" href="/style/home.css">
-  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
-
 </head>
 
 <body>
   <header>
-    <h1>
-      <a href="/">Keren Nzira</a>
-    </h1>
+    <a href="/">Keren Nzira</a>
     <nav>
       <ul>
         <li class="menu"><a href="/html/CV.html">CV</a></li>
@@ -27,9 +20,9 @@
       </ul>
     </nav>
   </header>
-  <main>
 
-    <div><img src="/img/photo.jpg" alt="Photo de Sujoy Paul"></div>
+  <main>
+    <div><img src="/img/profil.jpg" alt="Photo de Sujoy Paul"></div>
     <div>
       <h2>Hello</h2>
       <h3>A propos de moi</h3>
@@ -42,8 +35,8 @@
         <p><a href="/html/Contact.html" class=" bg-blue">Contact</a></p>
       </div>
     </div>
-
   </main>
+
   <footer>
     <div>
       <h3>Télephone </h3>
@@ -57,11 +50,24 @@
       <h3>Suivez-moi</h3>
       <div class="icon">
         <a href="https://www.linkedin.com/in/keren-nzira/" target="_blank" rel="noopener noreferrer"
-          title="Instagram Profile"><iconify-icon icon="ri:linkedin-fill"></iconify-icon></a>
-        <a href="https://twitter.com/akelpha2" target="_blank" rel="noopener noreferrer"
-          title="Twitter Profile"><iconify-icon icon="ri:twitter-x-line"></iconify-icon></a>
-        <a href=" https://github.com/Akelpha" target="_blank" rel="noopener noreferrer"
-          title="GitHub profile"><iconify-icon icon="codicon:github"></iconify-icon></a>
+          title="Instagram Profile">
+          <svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="2em" viewBox="0 0 24 24">
+            <path fill="#000"
+              d="M20.47 2H3.53a1.45 1.45 0 0 0-1.47 1.43v17.14A1.45 1.45 0 0 0 3.53 22h16.94a1.45 1.45 0 0 0 1.47-1.43V3.43A1.45 1.45 0 0 0 20.47 2M8.09 18.74h-3v-9h3ZM6.59 8.48a1.56 1.56 0 1 1 0-3.12a1.57 1.57 0 1 1 0 3.12m12.32 10.26h-3v-4.83c0-1.21-.43-2-1.52-2A1.65 1.65 0 0 0 12.85 13a2 2 0 0 0-.1.73v5h-3v-9h3V11a3 3 0 0 1 2.71-1.5c2 0 3.45 1.29 3.45 4.06Z" />
+          </svg>
+        </a>
+        <a href="https://twitter.com/akelpha2" target="_blank" rel="noopener noreferrer" title="Twitter Profile">
+          <svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="2em" viewBox="0 0 128 128">
+            <path
+              d="M75.916 54.2L122.542 0h-11.05L71.008 47.06L38.672 0H1.376l48.898 71.164L1.376 128h11.05L55.18 78.303L89.328 128h37.296L75.913 54.2ZM60.782 71.79l-4.955-7.086l-39.42-56.386h16.972L65.19 53.824l4.954 7.086l41.353 59.15h-16.97L60.782 71.793Z" />
+          </svg>
+        </a>
+        <a href=" https://github.com/Akelpha" target="_blank" rel="noopener noreferrer" title="GitHub profile">
+          <svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="2em" viewBox="0 0 24 24">
+            <path fill="#000"
+              d="M12 0a12 12 0 1 0 0 24a12 12 0 0 0 0-24m3.163 21.783h-.093a.5.5 0 0 1-.382-.14a.5.5 0 0 1-.14-.372v-1.406q.01-.701.01-1.416a3.7 3.7 0 0 0-.151-1.028a1.83 1.83 0 0 0-.542-.875a8 8 0 0 0 2.038-.471a4.05 4.05 0 0 0 1.466-.964c.407-.427.71-.943.885-1.506a6.8 6.8 0 0 0 .3-2.13a4.1 4.1 0 0 0-.26-1.476a3.9 3.9 0 0 0-.795-1.284a2.8 2.8 0 0 0 .162-.582q.05-.3.05-.604q0-.392-.09-.773a5 5 0 0 0-.221-.763a.3.3 0 0 0-.111-.02h-.11q-.346.004-.674.111a5 5 0 0 0-.703.26a7 7 0 0 0-.661.343q-.322.191-.573.362a9.6 9.6 0 0 0-5.143 0a14 14 0 0 0-.572-.362a6 6 0 0 0-.672-.342a4.5 4.5 0 0 0-.705-.261a2.2 2.2 0 0 0-.662-.111h-.11a.3.3 0 0 0-.11.02a6 6 0 0 0-.23.763q-.08.382-.081.773q0 .304.051.604t.16.582A3.9 3.9 0 0 0 5.702 10a4.1 4.1 0 0 0-.263 1.476a6.9 6.9 0 0 0 .292 2.12c.181.563.483 1.08.884 1.516c.415.422.915.75 1.466.964c.653.25 1.337.41 2.033.476a1.8 1.8 0 0 0-.452.633a3 3 0 0 0-.2.744a2.75 2.75 0 0 1-1.175.27a1.8 1.8 0 0 1-1.065-.3a2.9 2.9 0 0 1-.752-.824a3 3 0 0 0-.292-.382a2.7 2.7 0 0 0-.372-.343a1.8 1.8 0 0 0-.432-.24a1.2 1.2 0 0 0-.481-.101q-.06.002-.12.01a.7.7 0 0 0-.162.02a.4.4 0 0 0-.13.06a.12.12 0 0 0-.06.1a.33.33 0 0 0 .14.242q.14.111.232.171l.03.021q.2.155.382.333q.169.148.3.33q.136.178.231.381q.11.2.231.463c.188.474.522.875.954 1.145c.453.243.961.364 1.476.351q.262 0 .522-.03q.258-.041.515-.091v1.743a.5.5 0 0 1-.533.521h-.062a10.286 10.286 0 1 1 6.324 0z" />
+          </svg>
+        </a>
       </div>
     </div>
     <div class="text-small">&copy; 2024 By Keren Nzira</div>
